# simulation_collision_avoidance

./: README.md  modified_drone_control.py  og_drone_path_control.py
drone_ws/.catkin_tools/profiles/default/: devel_collisions.txt
drone_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
drone_ws/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
drone_ws/devel/.private/ipcamera_driver/: .catkin  local_setup.sh
drone_ws/devel/.private/iq_gnc/: .catkin  .rosinstall
drone_ws/devel/.private/iq_sim/: .catkin  .rosinstall
drone_ws/devel/.private/libmavconn/: .catkin
drone_ws/devel/.private/mavros/: .catkin  local_setup.sh  setup.sh
drone_ws/devel/.private/mavros_extras/: .catkin  setup.sh
drone_ws/devel/.private/mavros_msgs/: .catkin  .rosinstall  setup.sh
drone_ws/devel/.private/test_mavros/: .catkin  .rosinstall  setup.sh
drone_ws/devel/include/mavros_msgs/: ADSBVehicle.h  ActuatorControl.h  (+173 more)
drone_ws/logs/mavlink/: build.cmake.000.log.stderr
drone_ws/src/: .rosinstall  .rosinstall.bak
drone_ws/src/meshes/: prop_1045_CCW.dae  prop_1045_CW.dae
yolo_midas_collision_estimation/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
yolo_midas_collision_estimation/src/yolobot_recognition/: CMakeLists.txt
yolo_midas_collision_estimation/src/yolov8_msgs/: CMakeLists.txt
yolo_midas_collision_estimation/src/yolov8_msgs/msg/: ConfidenceScore.msg  CustomMsg.msg  DepthResult.msg  Yolov8Inference.msg
(+767 files in other folders)
